--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,31 +1,18 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 
-<h1>Meetings</h1>
+<h1>Встречи</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @meetings.each do |meeting| %>
-      <tr>
-        <td><%= meeting.title %></td>
-        <td><%= meeting.description %></td>
-        <td><%= meeting.image_url %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="line">
+
+      <div class="<%= cycle('entry_l', 'entry_r') %>">
+        <%=link_to image_tag(meeting.image_url), meeting_path(meeting)%>
+        <h2><%= truncate(meeting.title, length: 12) %></h2>
+      </div>
+    </div>
     <% end %>
-  </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Meeting', new_meeting_path %>
