--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@ header {
   img {
     float: left;
   }
+  .login {
+    font: small-caps 20px/10px "Times New Roman", serif;
+    text-align: right;
+  }
 }
 
 #notice {
