--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     	<% else %>
     		<%=link_to  "Зарегистрируйтесь", new_user_path %>
     		, или
-    		<%=link_to  "войдите", login_path %>
+    		<%=link_to  "Войдите", login_path %>
     	<% end %>
     </div>
   </header>
