--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ header {
   img {
     float: left;
   }
-  .login {
+  #login {
     font: small-caps 20px/10px "Times New Roman", serif;
     text-align: right;
   }
