--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(user) do |f| %>
+<%= form_for user, :html => { :multipart => true } do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> сведения о данном пользователе не могут быть обновлены:</h2>
@@ -10,7 +10,6 @@
       </ul>
     </div>
   <% end %>
-
   <fieldset>
   <legend>Введите информацию о пользователе</legend>
   <div class="field">
@@ -26,6 +25,11 @@
   <div class="field">
     <%= f.label "Пароль еще раз" %>
     <%= f.password_field :password_confirmation %>
+  </div>
+
+  <div>
+    <%= f.label "Фото" %>
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="actions">
