--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -1,6 +1,15 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#vatar { 
+    margin: 10px;
+    padding: 0;
+    width:64px;
+    height:64px;
+    background: #c2c2c2;
+    border: 1px solid #000;
+    border-radius:3px;
+}
 #mtitle {
     margin: 0;
     padding-bottom: 0em;
