--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#vatar { 
+.avatar { 
     margin: 10px;
     padding: 0;
     width:64px;
@@ -38,7 +38,7 @@
   padding: 1em;
   background: white;
   width: 100%;
-  img {
+  .meeting_image {
     width: 200px;
   } 
   h1 {
