set default avatar and new css

--- a/app/views/lk/show.html.erb
+++ b/app/views/lk/show.html.erb
@@ -4,3 +4,4 @@
 </div>
 <h2><%= @user.name %></h2>
 <span id="status">Ваш текущий статус:<%= @user.status %></span>
+<%= link_to "Редактировать",  lk_edit_path %>
