--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(meeting) do |f| %>
+<%= form_for meeting, :html => { :multipart => true } do |f| %>
   <% if meeting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
@@ -21,9 +21,9 @@
     <%= f.text_area :description %>
   </div>
 
-  <div class="field">
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
+  <div>
+    <%= f.label "Фото" %>
+    <%= f.file_field :image %>
   </div>
 
   <div class="actions">
