--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -9,7 +9,7 @@
     <div class="line">
 
       <div class="<%= cycle('entry_l', 'entry_r') %>">
-        <%=link_to image_tag(meeting.image_url), meeting_path(meeting)%>
+        <%=link_to image_tag(meeting.image), meeting_path(meeting)%>
         <h2><%= truncate(meeting.title, length: 12) %></h2>
       </div>
     </div>
