--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -8,7 +8,10 @@
     height:64px;
     background: #c2c2c2;
     border: 1px solid #000;
-    border-radius:3px;
+    box-shadow: -19px 0 22px -19px #000, 19px 0 22px -19px #000;
+        -webkit-border-radius: 50em;
+        -moz-border-radius: 50em;
+        border-radius: 50em;
 }
 #mtitle {
     margin: 0;
