--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= @page_title || "GOODMEET" %>
     <div id="login">
     	<% if session[:user_id] %>
-    		Добро пожаловать, <%= link_to (User.find_by(id: session[:user_id])).name, lk_show_path %>
+    		Добро пожаловать, <%= link_to (User.find_by(id: session[:user_id])).name, profile_path %>
     		<%=link_to  "Выйти", '/sessions/destroy' %>
     	<% else %>
     		<%=link_to  "Зарегистрируйтесь", new_user_path %>
