--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -11,11 +11,10 @@
   		<%= sanitize @meeting.description %>
   	</div>
 	<div id="visiters">
-		<ul> Участники:
+		 Участники:
 		<% @meeting.users.each do |user| %>
-		<li><%= image_tag user.profile.avatar(:thumb), :class => "avatar" %><%= user.profile.name %></li>
+		<div class="visiter"><%=link_to (image_tag user.profile.avatar(:thumb), :class => "avatar"), not_my_profile_path(user) %><%= user.profile.name %></div>
 		<% end %>
-		</ul>
 	</div>
 	<br>
 	<div id="comments">
