--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Goodmeet</title>
+  <meta name="viewport" content = "width-device-width, initial-scale-1.0"/>
+  <title>MyBooze</title>
   <%= stylesheet_link_tag    "application", media: "all",
     "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -10,7 +11,6 @@
 <body>
   <header>
     <%= link_to image_tag("logo.png"), root_path %>
-    <%= @page_title || "GOODMEET" %>
     <div id="login">
     	<% if session[:user_id] %>
     		Добро пожаловать, <%= link_to (User.find_by(id: session[:user_id])).name, profile_path %>
