--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
  * 
  *= require_tree .
  *= require_self
+ *= require jquery-ui/datepicker
  */
+
  div, span, body {
   //background-color: #ADD8E6;
  }
