--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,34 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header>
-    <%= link_to image_tag("logo.png"), root_path %>
-    <div id="login">
-    	<% if session[:user_id] %>
-    		Добро пожаловать, <%= link_to (User.find_by(id: session[:user_id])).name, profile_path %>
-    		<%=link_to  "Выйти", '/sessions/destroy' %>
-    	<% else %>
-    		<%=link_to  "Зарегистрируйтесь", new_user_path %>
-    		, или
-    		<%=link_to  "Войдите", login_path %>
-    	<% end %>
+  <input type="checkbox" id="nav-toggle" hidden>
+    <div class="nav">
+      <label for="nav-toggle" class="nav-toggle" onclick></label>
+      <h2 class="logo"> 
+            <%= link_to "MyBooze", root_path %>
+      </h2>
+        <ul>
+            <li><%= link_to "Домой", root_path %>
+        </ul>
+    </div>
+    <div class="mask-content"></div>
+    <main role="main">
+    <header>
+      <%= link_to image_tag("logo.png"), root_path %>
+      <div id="login">
+       <% if session[:user_id] %>
+          Добро пожаловать, <%= link_to (User.find_by(id: session[:user_id])).name, profile_path %>
+        <%=link_to  "Выйти", '/sessions/destroy' %>
+       <% else %>
+        <%=link_to  "Зарегистрируйтесь", new_user_path %>
+        , или
+        <%=link_to  "Войдите", login_path %>
+      <% end %>
     </div>
   </header>
   <div class="<%= controller.controller_name %>">
       <%= yield %>
   </div>
+</main>
 </body>
 </html>
