--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,39 @@
  *= require_self
  *= require jquery-ui/datepicker
  */
+
+ .button { 
+ border-top: 1px solid #ffcb82; 
+ background: #d68965; 
+ background: -webkit-gradient(linear, left top, left bottom, from(#fcc500), to(#d68965)); background: -moz-linear-gradient(top, #fcc500, #d68965); 
+ background: -ms-linear-gradient(top, #fcc500, #d68965); 
+ background: -o-linear-gradient(top, #fcc500, #d68965); 
+ padding: 9px 18px; 
+ -webkit-border-radius: 8px; 
+ -moz-border-radius: 8px; 
+ border-radius: 8px; 
+ -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2); 
+ -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2); 
+ box-shadow: 0 1px 2px rgba(0,0,0,.2); 
+ text-shadow: rgba(0,0,0,.4) 0 1px 0; color: #ffffff; 
+ font-size: 11px; 
+ font-family: Helvetica, Arial, Sans-Serif; 
+ text-decoration: none; 
+ vertical-align: middle; 
+ } 
+ .button:hover { 
+ color: #fcebea; 
+ background: #ff6f00; 
+ background: -webkit-gradient(linear, left top, left bottom, from(#e39700), to(#ff6f00)); background: -moz-linear-gradient(top, #e39700, #ff6f00); 
+ background: -ms-linear-gradient(top, #e39700, #ff6f00); 
+ background: -o-linear-gradient(top, #e39700, #ff6f00); 
+ } 
+ .button:active { 
+ border-top-color: #ff0000; 
+ background: #ff0000; 
+ }
+
+
 @charset "UTF-8";
 
 /**
