--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -24,7 +24,9 @@
 		<%= render @meeting.comments %>
 	</div>
 	<%= render 'comments/form' %>
-	<% unless @meeting.users.find_by(id: session[:user_id]) or @meeting.creator.user ==User.find(session[:user_id]) %>
-	<%= link_to 'Учавствовать', participate_path %>
+	<% if session[:user_id] %>
+		<% unless @meeting.users.find_by(id: session[:user_id]) or @meeting.creator.user == current_user %>
+		<%= link_to 'Учавствовать', participate_path, class: "button" %>
+	<% end %>
 	<% end %>
 </div>
