--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,19 @@
  *= require jquery-ui/datepicker
  */
 
+
+  .avatar {
+    margin: 10px;
+    padding: 0;
+    width:64px;
+    height:64px;
+    background: #c2c2c2;
+    border: 1px solid #000;
+    box-shadow: -19px 0 22px -19px #000, 19px 0 22px -19px #000;
+        -webkit-border-radius: 50em;
+        -moz-border-radius: 50em;
+        border-radius: 50em;
+  }
  .button { 
  border-top: 1px solid #ffcb82; 
  background: #d68965; 
