--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,31 @@
   <input type="checkbox" id="nav-toggle" hidden>
     <div class="nav">
       <label for="nav-toggle" class="nav-toggle" onclick></label>
+      <% if session[:user_id] %>
       <h2 class="logo"> 
-            <%= link_to "MyBooze", root_path %>
+                <%=link_to (image_tag current_user.profile.avatar(:thumb), :class => "avatar"), profile_path %>
+                <%= current_user.profile.name %>
+
       </h2>
+      <% unless current_user.meetings.empty? %>
         <ul>
-            <li><%= link_to "Домой", root_path %>
+        Мои встречи:
+          <% current_user.meetings.each do |meeting| %>
+            <li><%= link_to meeting.title, meeting_path(meeting) %></li>
+          <% end %>
         </ul>
+      <% else %>
+        Запланированных встреч нет!
+      <% end %>
+      <% else %>
+      <h2 class="logo">
+        Войдите или зарегистрируйтесь!
+      </h2>
+      <ul>
+        <li><%= link_to "Войти", login_path %></li>
+        <li><%= link_to "Зарегистрироваться", new_user_path %></li>
+      </ul>
+      <% end %>
     </div>
     <div class="mask-content"></div>
     <main role="main">
