--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -26,6 +26,10 @@
     <%= f.text_field :required_rating %>
   </div>  
 
+  <div class="field">
+    <%= f.label "Место" %>
+    <%= f.text_field :address %>
+  </div>
   <div>
     <%= f.label "Фото" %>
     <%= f.file_field :image %>
