--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -30,3 +30,20 @@
 	<% end %>
 	<% end %>
 </div>
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+<script type="text/javascript">
+	handler = Gmaps.build('Google');
+	handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  	markers = handler.addMarkers([
+    {
+      "lat": <%= @meeting.latitude %>,
+      "lng": <%= @meeting.longitude %>,
+      "infowindow": "<%= @meeting.address %>"
+    }
+  ]);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+</script>
