--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -24,5 +24,23 @@
         <h2> Создать встречу</h2>
       </div>
     </div>
-
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers([
+    <% @meetings.each do |meeting| %>
+    {
+      "lat": <%= meeting.latitude %>,
+      "lng": <%= meeting.longitude %>,
+      "infowindow": "<%= meeting.address %>"
+    }
+  ],
+  <% end %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+</script>
 
