--- a/app/views/profile/not_my_profile.html.erb
+++ b/app/views/profile/not_my_profile.html.erb
@@ -20,3 +20,11 @@
   <strong>Рейтинг:</strong>
   <%= @profile.rating %>
 </p>
+
+<p>
+  <strong>Статус:</strong>
+  <%= @profile.user.status.name %>
+</p>
+<% if admin? %>
+	<%= link_to "Редактировать", profile_edit_path(@profile) %>
+<% end %>
