--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
 		<strong><%= comment.user.name %>:</strong>
 		<%= comment.body %>
 		<% if current_user %>
-			<% if current_user.status == "admin" or current_user.status == "moderator"%>
+			<% if current_user.status_id == 1 or current_user.status_id == 2 %>
 			<%= link_to 'Удалить комментарий', [comment.meeting, comment], method: :delete, data: { confirm: 'Вы уверены?' } %>
 			<% end %>
 		<% end %>
