--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<% if notice %>	
+	<p id="notice"><%= notice %></p>
+<% end %>
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
