--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -1,113 +1,35 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.visiter {
-  outline: 1px solid #000;
-  background-color: #E0FFFF;
-  a {
-    text-decoration: none;
-  }
-}
-#mtitle {
-    margin: 0;
-    padding-bottom: 0em;
-    font:  250% sans-serif;
-    color: #226;
-    border-bottom: 2px dotted #77d;
-    width: 95%;
-}
-#meeting {
-  padding-left: 50px;
-  position: relative;
-  width: 98%;
-  #description {
-    float: left;
-  }
-  #visiters {
-    padding-right: 50px;
-    float: right;
-  }
-  #comments {
-    float: right;
-  }
-}
 .meetings {
+  clear: both;
+  margin: 7em;
+  height: 50em;
   width: 100%;
-  padding: 1em;
-  background: white;
-  width: 100%;
-  .meeting_image {
-    width: 200px;
-  } 
-  h1 {
-    margin: 0;
-    padding-bottom: 0em;
-    font:  250% sans-serif;
-    color: #226;
-    border-bottom: 2px dotted #77d;
-    width: 95%;
+  .meeting {
+    border-radius: 5px;
+    background: #ffffff;
+    margin: 5px;
+    display: inline-block;
+    height: 200px;
+    width: 350px;
+    padding: 10px;
+    border: 2px solid #c8c8c8;
+    h2 {
+    }
+    .description {
+    }
+    img {
+      width: 15em;
+      height: 10em;
+      border-radius: 5px;
+    }
   }
-  .line {
-    padding-left: 50px;
-    position: relative;
-    width: 98%;
-    .entry_r {
-      img {
-        width: 60px;
-        height: 60px;
-        margin-right: 5px;
-        margin-bottom: 5px;
-        float:left;
-        box-shadow: -19px 0 22px -19px #000, 19px 0 22px -19px #000;
-        -webkit-border-radius: 50em;
-        -moz-border-radius: 50em;
-        border-radius: 50em;
-      }
-      padding-top: 10px;
-      float: right; 
-      width: 50%;
-
-      h3 {
-        font-size: 120%;
-        font-family: sans-serif;
-        margin-left: 100px;
-        margin-top: 0;
-        margin-bottom: 2px;
-        color: #227;
-        text-align:center;
-        text-decoration: none;
-      }
-    }
-      .entry_l {
-      padding-top: 10px;
-      float: left; 
-      width: 50%;
-      background: #ffffff;
-
-      img {
-        width: 60px;
-        height: 60px;
-        margin-right: 5px;
-        margin-bottom: 5px;
-        float: left;
-        box-shadow: -19px 0 22px -19px #000, 19px 0 22px -19px #000;
-        -webkit-border-radius: 50em;
-        -moz-border-radius: 50em;
-        border-radius: 50em;
-      }
-
-      h3 {
-        font-size: 120%;
-        font-family: sans-serif;
-        margin-left: 100px;
-        margin-top: 0;
-        margin-bottom: 2px;
-        color: #227;
-        float: right;
-        text-decoration: none;
-      }
-    }
-
+  .meeting:hover {
+    background: #fafafa;
   }
 }
+  .deleteAction {
+    color: blue;
+    cursor: pointer;
+  }
