--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,8 +1,12 @@
-p
-  strong
-    = comment.user.name
-    | :
-  = comment.body
-  - if current_user
-    - if current_user.status_id == 1 or current_user.status_id == 2
-      = link_to 'Удалить комментарий', [comment.meeting, comment], method: :delete, data: { confirm: 'Вы уверены?' }
+.comment
+  = image_tag comment.user.profile.avatar.url(:thumb), class: "avatar"
+  p
+  .text
+    strong
+      = comment.user.name
+      | :&nbsp&nbsp
+    = comment.body
+    | &nbsp&nbsp
+    - if current_user
+      - if current_user.status_id == 1 or current_user.status_id == 2
+        = link_to 'Удалить комментарий', [comment.meeting, comment], method: :delete, data: { confirm: 'Вы уверены?' }
