Added AJAX and normilize gmaps

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -4,6 +4,10 @@
 .meetings {
   height: 50em;
   width: 100%;
+  #map {
+    width: 82%;
+    height: 300px;
+    }
   .meeting_page {
     background: #ffffff;
     width: 80%;
