--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,4 +1,4 @@
-.comment
+.comment data-comment_id = comment.id
   = image_tag comment.user.profile.avatar.url(:thumb), class: "avatar"
   p
   .text
@@ -9,4 +9,4 @@
     | &nbsp&nbsp
     - if current_user
       - if current_user.status_id == 1 or current_user.status_id == 2
-        = link_to 'Удалить комментарий', [comment.meeting, comment], method: :delete, data: { confirm: 'Вы уверены?' }
+        = link_to 'Удалить комментарий', [comment.meeting, comment], remote: true, method: :delete
