--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,7 +1,7 @@
 - if session[:user_id]
   h2
     | Добавить комментарий:
-  = form_for([@meeting, @meeting.comments.build]) do |f|
+  = form_for([@meeting, @meeting.comments.build], remote: true) do |f|
     |      
     p
       |      
