AJAX pagination  on comments

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,2 @@
-$("<%= escape_javascript(render @comment) %>").appendTo(".comments");
+$("<%= escape_javascript(render @comment) %>").appendTo(".comments_block");
 $("#comment_body").val('')
