--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,4 +1,5 @@
-= link_to image_tag(user.profile.avatar.url(:thumb), class: "avatar"), user.profile
-br
-strong
-  = user.profile.name
+.profile
+  = link_to image_tag(user.profile.avatar.url(:thumb), class: "avatar"), user.profile
+  br
+  strong
+    = user.profile.name
