--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -3,7 +3,7 @@
   p
   .text
     strong
-      = comment.user.name
+      = comment.user.profile.name
       | :&nbsp&nbsp
     = comment.body
     | &nbsp&nbsp
